# auto-rust

./: .gitignore  .notes.txt.swp  Cargo.toml  FILTERING_IMPLEMENTATION_PLAN.md  FILTERING_IMPLEMENTATION_SUMMARY.md  FILTERING_PLAN.md  FILTERING_TESTING_PLAN.md  HASHMAP_IMPORT_VERIFICATION.md  README.md  llm.py  notes.txt  reqs.txt  todo_ideas_9-16.md  toml.txt
crud_macros/: Cargo.toml
crud_macros/src/: lib.rs
fastapi-template/: Dockerfile  main.py  requirements.txt
fastapi-template/.chromadb/: chroma.sqlite3
src/: add_compose.rs  add_fastapi.rs  add_functions.rs  add_minio.rs  add_object.rs  add_python.rs  add_react.rs  add_tests.rs  base_structs.rs  boilerplate.rs  compose.txt  ffmpeg.rs  gen_docker.rs  gen_examples.rs  gen_sql.rs  gen_toml.rs  llm.rs  main.rs  schema.rs  select_funcs.rs  sql_funcs.rs
test1/: Dockerfile
