[package]
name = "auto-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.8"
convert_case = "0.8.0"
serde = "1.0.219"
sf = "0.1.1"
sqlx = "0.8.5"
ollama-rs = {version = "0.3.1", features = ["stream", "macros"]}
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
tempfile = "3.10.1"

crud_macros = { path = "./crud_macros" }
fs_extra = "1.3.0"

[build-dependencies]


